Correctly spacing the buttons from one another

--- a/src/components/ShoppingButtons/ShoppingButtons.module.scss
+++ b/src/components/ShoppingButtons/ShoppingButtons.module.scss
@@ -1,4 +1,8 @@
 .shoppingButtons {
     margin-left: var(--global-margin);
     margin-right: var(--global-margin);
+
+    & > :first-child {
+        margin-bottom: 1rem;
+    }
 }
